--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,8 @@
 <html>
-<h2>データベースにフォームに入力したデータを追加する</h2>
-<form method="get" action="/add_sql">
-    <label>名前： <input type="text" name="name"></label>
-    <input type="radio" name="gender" value="男">男
-    <input type="radio" name="gender" value="女">女
-    <label>趣味： <input type="text" name="hobby"></label>
-    <input type="submit" value="送信する">
-</form>
-<html>
+<h2>sqlalchemyを使ってPythonからデータベースを操作する</h2>
+<p>
+    ・<a href='/add'>データをテーブルに登録する</a>
+    <p>
+        ・<a href='/select'>テーブルに登録されているデータを確認する</a>
+
+</html>
