--- a/templates/update.html
+++ b/templates/update.html
@@ -25,7 +25,7 @@
             <form method="get" action="/update_sql">
                 <input type="hidden" name="user_id" value={{id_}}>
                 <label>名前： <input type="text" name="name"></label>
-                <input type="radio" name="gender" value="男">男
+                <input type="radio" name="gender" value="男" checked="checked">男
                 <input type="radio" name="gender" value="女">女
                 <label>趣味： <input type="text" name="hobby"></label>
                 <input type="submit" value="変更する">
